test/error/parsing_files/type_as_binding02.err
File "parsing_files/type_as_binding02.st", line 1, characters 4-8:
1 | f (type, x) := g ().
       ^^^^
Error: Syntax error.
Hint: Is not a correct binding.
